objects/Account.object
<CustomObject>
    <fields>
        <fullName>Alphabet__c</fullName>
        <label>Alphabet</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Alphabet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Change_date__c</fullName>
        <label>Name Change date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <label>Sales Representative</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>